toastr Add  Ajax  Modal  Save

--- a/Blog.Mvc/Areas/Admin/Views/Shared/_LayoutJsPartial.cshtml
+++ b/Blog.Mvc/Areas/Admin/Views/Shared/_LayoutJsPartial.cshtml
@@ -9,3 +9,4 @@
 <script src="~/assets/demo/datatables-demo.js"></script>
 <script src="https://cdn.datatables.net/buttons/2.3.4/js/dataTables.buttons.min.js" crossorigin="anonymous"></script>
 <sript src="https://cdn.datatables.net/buttons/2.3.4/js/buttons.bootstrap4.min.js" crosorigin="anonymous"></sript>
+<sript src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" crosorigin="anonymous"></sript>
