--- a/Blog.Mvc/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Blog.Mvc/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
             <footer class="py-4 bg-light mt-auto">
                 <div class="container-fluid">
                     <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">Tüm Hakları Saklıdır &copy; Your Website 2020</div>
+                        <div class="text-muted">Tüm Hakları Saklıdır &copy; Blog</div>
                         <div>
                             <a href="#">Gizlilik Politikası</a>
                             &middot;                           
