--- a/Blog.Mvc/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Blog.Mvc/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -35,7 +35,8 @@
         </ul>
     </nav>
     <div id="layoutSidenav">
-        @await  Html.PartialAsync("_LayoutSideBarNavPartial")
+        @await Component.InvokeAsync("AdminMenu") @*AdminMenuViewComponent*@
+        @*@await  Html.PartialAsync("_LayoutSideBarNavPartial")*@
         <div id="layoutSidenav_content">
             <main>
                 <div class="container-fluid">
