--- a/Blog.Mvc/Areas/Admin/Views/User/AccessDenied.cshtml
+++ b/Blog.Mvc/Areas/Admin/Views/User/AccessDenied.cshtml
@@ -11,6 +11,7 @@
     <meta name="author" content="" />
     <title>403 | Erişiminiz Red Edildi</title>
     <link href="~/css/styles.css" rel="stylesheet" />
+    <link href="~/css/httpErrorBgAnimation.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -20,7 +21,7 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-6">
-                            <div class="text-center mt-4">
+                            <div class="text-center mt-4 text-white">
                                 <h1 class="display-1">403</h1>
                                 <p class="lead">Erisiminiz Rededilmiştir / Access Denied</p>
                                 <p>Bu sayfe içerisindekilere erisiminiz yoktur.</p>
